Fix text spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,6 +36,7 @@ input#search-bar {
 
 .modal h3, .modal h4 {
     color: #fff;
+    margin-bottom: 10px;
 }
 
 .card-img-top {
